--- a/index.scss
+++ b/index.scss
@@ -1,81 +1,39 @@
+@use "./partials/palette";
+@use "./partials/typography";
+@use "./modules/home.scss";
+@use "./modules/skills.scss";
+@use "./modules/projects.scss";
+@use "./modules/about.scss";
+@use "./modules/menu.scss";
+
 * {
   margin: 0px;
   border: 0px;
 }
 
-$primaryColor: rgb(235, 88, 169);
-$secondaryColor: rgb(173, 16, 173);
-$primaryFont: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-
 body {
   background-color: rgb(191, 247, 247);
 }
 
-nav {
-  display: flex;
-  flex-direction: row;
-  justify-content: space-around;
-  border: 2px solid black;
-  padding: 20px;
-}
-
 a {
-  color: $primaryColor;
+  color: palette.$primary-color;
   text-decoration: none;
 }
 
 a:hover {
-  color: $secondaryColor;
+  color: palette.$secondary-color;
 }
 
-h1 {
-  color: $primaryColor;
-  font-family: $primaryFont;
-  font-weight: bolder;
-}
 
 h2 {
-  color: $primaryColor;
-  font-family: $primaryFont;
-  font-weight: bolder;
+  color: palette.$secondary-color;
+  font-family: typography.$primary-font; 
 }
 
 p {
-  color: $primaryColor;
-  font-family: $primaryFont;
+  color: palette.$primary-color;
+  font-family: typography.$primary-font;
  }
 
-  .Home {
-padding: 100px;
-margin: 100px;
-display: flex;
-flex-direction: column;
-justify-content: flex-end;
-align-items: flex-end;
-}
 
-.Skills {
-  display: flex;
-  flex-direction: row;
-  justify-content: space-around;
-  padding: 60px;
-  margin: 60px;
-}
-
-.Projects {
-  display: flex;
-  flex-direction: row;
-  justify-content: space-around;
-  padding: 60px;
-  margin: 60px;
-}
-
-.About {
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-  align-content: center;
-  padding: 60px;
-  margin: 60px;
-}
 
