--- a/modules/skills.scss
+++ b/modules/skills.scss
@@ -2,9 +2,5 @@
 @use "../partials/typography";
 
 .Skills {
-  display: flex;
-  flex-direction: row;
-  justify-content: space-around;
-  padding: 60px;
-  margin: 60px;
+  @include flex;
 }
