--- a/modules/about.scss
+++ b/modules/about.scss
@@ -2,10 +2,5 @@
 @use "../partials/typography";
 
 .About {
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-  align-content: center;
-  padding: 60px;
-  margin: 60px;
+@include flex;
 }
