--- a/index.scss
+++ b/index.scss
@@ -5,14 +5,7 @@
 @use "./modules/projects.scss";
 @use "./modules/about.scss";
 @use "./modules/navigation.scss";
-
-@mixin flex {
-  display: flex;
-  flex-direction: row;
-  justify-content: space-around;
-  padding: 100px;
-  margin: 100px;
-}
+@use "./partials/mixins";
 
 * {
   margin: 0px;
@@ -33,5 +26,6 @@ p {
   font-family: typography.$primary-font;
  }
 
-
-
+.Contact {
+border: 2px solid black;
+}
