--- a/modules/navigation.scss
+++ b/modules/navigation.scss
@@ -1,10 +1,12 @@
 @use "../partials/palette";
 @use "../partials/typography";
+@use "../partials/mixins";
 
 .navigation {
-@include mixins.flex;
-  border: 2px solid black;
   
+  @include mixins.flex;
+  border: 2px solid black;
+
 &__link {
   color: palette.$primary-color;
   text-decoration: none;
