--- a/output.css
+++ b/output.css
@@ -54,7 +54,7 @@
   justify-content: space-around;
   padding: 20px;
   margin: 20px;
-  border: 2px solid black;
+  border: 2px solid hotpink;
 }
 .navigation__link {
   color: rgb(248, 168, 181);
@@ -70,9 +70,11 @@
   justify-content: space-around;
   padding: 20px;
   margin: 20px;
+  border: 2px solid hotpink;
 }
 .Contact__link {
   text-decoration: none;
+  color: rgb(248, 168, 181);
 }
 
 * {
