--- a/modules/projects.scss
+++ b/modules/projects.scss
@@ -5,7 +5,10 @@
 
 .Projects {
 @include mixins.flex;
-
+@media only screen and (max-width: mixins.$phone)
+{
+flex-direction: column;
+}
   &__Set {
     display: flex;
     flex-direction: column;
