--- a/output.css
+++ b/output.css
@@ -22,6 +22,11 @@
   padding: 20px;
   margin: 20px;
 }
+@media only screen and (max-width: 600px) {
+  .Skills {
+    flex-direction: column;
+  }
+}
 
 .Projects {
   display: flex;
@@ -29,6 +34,11 @@
   justify-content: space-around;
   padding: 20px;
   margin: 20px;
+}
+@media only screen and (max-width: 600px) {
+  .Projects {
+    flex-direction: column;
+  }
 }
 .Projects__Set {
   display: flex;
@@ -46,6 +56,11 @@
   justify-content: space-around;
   padding: 20px;
   margin: 20px;
+}
+@media only screen and (max-width: 600px) {
+  .About {
+    flex-direction: column;
+  }
 }
 
 .navigation {
