--- a/modules/skills.scss
+++ b/modules/skills.scss
@@ -4,8 +4,13 @@
 
 .Skills {
   @include mixins.flex;
-  @media only screen and (max-width: mixins.$phone)
+  @include mixins.screen-size(mixins.$small, mixins.$medium)
   {
-  flex-direction: column;
+   flex-direction: column;
+  }
+
+  @include mixins.screen-size(mixins.$xsmall, mixins.$small)
+  {
+   flex-direction: column;
   }
 }
