--- a/output.css
+++ b/output.css
@@ -2,7 +2,6 @@
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  align-items: flex-end;
   padding: 100px;
   margin: 100px;
 }
@@ -22,7 +21,12 @@
   padding: 20px;
   margin: 20px;
 }
-@media only screen and (max-width: 600px) {
+@media only screen and (min-width: 601px) and (max-width: 900px) {
+  .Skills {
+    flex-direction: column;
+  }
+}
+@media only screen and (min-width: 1px) and (max-width: 600px) {
   .Skills {
     flex-direction: column;
   }
@@ -35,7 +39,7 @@
   padding: 20px;
   margin: 20px;
 }
-@media only screen and (max-width: 600px) {
+@media only screen and (min-width: 601px) and (max-width: 900px) {
   .Projects {
     flex-direction: column;
   }
@@ -49,6 +53,11 @@
 .Projects__title {
   color: hotpink;
 }
+@media only screen and (min-width: 1px) and (max-width: 600px) {
+  .Projects {
+    flex-direction: column;
+  }
+}
 
 .About {
   display: flex;
@@ -57,7 +66,17 @@
   padding: 20px;
   margin: 20px;
 }
-@media only screen and (max-width: 600px) {
+@media only screen and (min-width: 601px) and (max-width: 900px) {
+  .About {
+    flex-direction: column;
+    align-items: center;
+  }
+}
+.About__img {
+  height: 100%;
+  width: 100%;
+}
+@media only screen and (min-width: 1px) and (max-width: 600px) {
   .About {
     flex-direction: column;
   }
@@ -74,9 +93,6 @@
 .navigation__link {
   color: rgb(248, 168, 181);
   text-decoration: none;
-}
-.navigation__link__link:hover {
-  color: hotpink;
 }
 
 .Contact {
