--- a/modules/about.scss
+++ b/modules/about.scss
@@ -4,18 +4,19 @@
 
 .About {
 @include mixins.flex;
-@include mixins.screen-size(mixins.$small, mixins.$medium)
-{
- flex-direction: column;
- align-items: center;
-}
-&__img {
-  height: 100%;
-  width: 100%;
-}
 
 @include mixins.screen-size(mixins.$xsmall, mixins.$small)
 {
  flex-direction: column;
 }
+
+@include mixins.screen-size(mixins.$small, mixins.$medium)
+{
+ flex-direction: column;
+}
+
+@include mixins.screen-size(mixins.$medium, mixins.$large)
+{
+flex-direction: row;
+} 
 }
