--- a/modules/navigation.scss
+++ b/modules/navigation.scss
@@ -11,5 +11,18 @@
   color: palette.$primary-color;
   text-decoration: none;
 }
+@include mixins.screen-size(mixins.$xsmall, mixins.$small)
+{
+ flex-direction: column;
+}
 
+@include mixins.screen-size(mixins.$small, mixins.$medium)
+{
+ flex-direction: column;
+}
+
+@include mixins.screen-size(mixins.$medium, mixins.$large)
+{
+ flex-direction: row;
+}
 }
